--- a/homeworks/week6/hw1/stylesheet.css
+++ b/homeworks/week6/hw1/stylesheet.css
@@ -298,16 +298,22 @@ footer {
         margin-top: 16px;
     }
 
+    .comment {
+        display: flex;
+        margin: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .comment__square {
         border: solid #c7e5ec 3px;
-        width: 400px;
-        height: 300px;
+        width: 600px;
+        height: 230px;
         margin: 5px;
-        margin-top: 45px;
+        margin-top: 90px;
         border-radius: 5px;
         box-shadow: -1.4px -1.4px 4px 0 var(--light-blue-grey);
-        display: flex;
-        align-items: center;
-        flex-direction: column;
     }
+    
+    
 }
