--- a/homeworks/week6/hw2/stylesheet2.css
+++ b/homeworks/week6/hw2/stylesheet2.css
@@ -1,6 +1,10 @@
 
+body {
+    background:rgba(0, 0, 0, 0.3);
+}
+
 .wrapper {
-    width: 645px;
+    max-width: 645px;
     height: 1200px;
     background: white;
     border-top: solid 20px #fad312;
@@ -8,11 +12,7 @@
     border-bottom: rgba(0, 0, 0, 0.3) 5px;
     border-right: rgba(0, 0, 0, 0.3) 5px;
     margin: 50px auto;
-    padding: 0px;
     box-shadow: 0 2.4px 5px 0 rgba(0, 0, 0, 0.3);
-    background-color: var(--white);
-    display: flex;
-    flex-direction: column;
 }
 
 .form__title {
@@ -32,7 +32,7 @@
     font-size: 14px;
     text-align: left;
     color: #000000;
-    line-height: 25px;
+    line-height: 20px;
 }
 
 .form__notice {
@@ -55,26 +55,16 @@ input {
     width: 287px;
 }
 
+.checkbox__bed {
+    margin-bottom: 15px;
+}
+
+#circle {
+    width: 20px;
+}
+
 .form__group {
     margin: 0px 0px 49px 41px;
-}
-
-.circle {
-    background: rgba(0, 0, 0, 0.3);
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    margin-right: 5px;
-    transform: translate(0, 2px)
-}
-
-.circle:hover {
-    background: white;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    border: rgba(0, 0, 0, 0.3) solid 0.05px;
-    cursor: pointer;
 }
 
 .other {
@@ -87,16 +77,12 @@ input {
     margin-bottom: 24px;
 }
 
-.type__bed, .type__floor {
-    margin-top: 24px;
-    display: flex;
-}
-
 #submit {
     width: 92px;
     height: 40px;
     margin-top: 55px;
     border-radius: 3px;
+    border: 0;
     background-color: #fad312;
     font-size: 15px;
     text-align: center;
@@ -123,29 +109,24 @@ footer {
     font-size: 13px;
     text-align: center;
     color: #999999;
-    margin-top: 100px;
+    margin-top: 200px;
     margin-right: auto;
     margin-left: auto;
     transform: translate(-645px, 0);
     line-height: 5em;
-    position: relative;
 }
 
 @media(max-width: 768px) {
     .wrapper {
-        width: 450px;
+        max-width: 645px;
         height: 1200px;
         background: white;
         border-top: solid 20px #fad312;
         border-left: rgba(0, 0, 0, 0.3) 5px;
         border-bottom: rgba(0, 0, 0, 0.3) 5px;
-        border-right: #0000004d 5px;
-        margin: 129px auto;
-        padding: 0px;
+        border-right: rgba(0, 0, 0, 0.3) 5px;
+        margin: 50px auto;
         box-shadow: 0 2.4px 5px 0 rgba(0, 0, 0, 0.3);
-        background-color: var(--white);
-        display: flex;
-        flex-direction: column;
     }
 
     footer {
@@ -159,7 +140,7 @@ footer {
         margin-top: 100px;
         margin-right: auto;
         margin-left: auto;
-        transform: translate(-740px, 0);
+        transform: translate(-645px, 0);
         line-height: 5em;
     }
 }
